--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "cookie-parser": "1.4.5",
+    "dotenv": "10.0.0",
     "eta": "1.12.1",
     "express": "4.17.1"
   }
